objects/FSL_Audit_Trail__c.object
<CustomObject>
    <fields>
        <fullName>Entity_Name__c</fullName>
        <inlineHelpText>Object name of the record which is being audited</inlineHelpText>
        <label>Entity Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event__c</fullName>
        <label>Event</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Added failure</fullName>
                </value>
                <value>
                    <fullName>Campaign or TRP viewed</fullName>
                </value>
                <value>
                    <fullName>Comments on Field Actions</fullName>
                </value>
                <value>
                    <fullName>Diagnostic Tool Launch</fullName>
                </value>
                <value>
                    <fullName>Faults received from Diagnostic Tool</fullName>
                </value>
                <value>
                    <fullName>Performed Repair</fullName>
                </value>
                <value>
                    <fullName>Procedure was viewed</fullName>
                </value>
                <value>
                    <fullName>Selected root cause on Repair</fullName>
                </value>
                <value>
                    <fullName>Selected root cause on T&amp;D</fullName>
                </value>
                <value>
                    <fullName>Supervisor checked if need review/perform</fullName>
                </value>
                <value>
                    <fullName>Technician checked if performed checkbox</fullName>
                </value>
                <value>
                    <fullName>Technician checked if reviewed checkbox</fullName>
                </value>
                <value>
                    <fullName>TSB is viewed</fullName>
                </value>
                <value>
                    <fullName>User searched faults or symptoms</fullName>
                </value>
                <value>
                    <fullName>User selected Access SRT Details</fullName>
                </value>
                <value>
                    <fullName>User viewed FC Overview</fullName>
                </value>
                <value>
                    <fullName>Verified solution</fullName>
                </value>
                <value>
                    <fullName>Viewed solution on Repair</fullName>
                </value>
                <value>
                    <fullName>Viewed solution on T&amp;D</fullName>
                </value>
                <value>
                    <fullName>Performed Solution</fullName>
                </value>
                <value>
                    <fullName>Search results or Solution Count</fullName>
                </value>
                <value>
                    <fullName>Changed Failure</fullName>
                </value>
                <value>
                    <fullName>Performed 4Cs</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FSL_Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FSL_Diagnostic_Audit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Diagnostic Audit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Failure_Name__c</fullName>
        <label>Failure Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Icon__c</fullName>
        <formula>IF(ISPICKVAL( Solution_Response__c, &quot;Not the solution. Continue troubleshooting.&quot;), 
  &apos;Not the solution. Continue troubleshooting.&apos;, 
IF(ISPICKVAL( Solution_Response__c, &quot;Most likely the solution. Repair recommended.&quot;), 
  &apos;Most likely the solution. Repair recommended.&apos;, 
IF(ISPICKVAL( Solution_Response__c, &quot;Could not perform the solution verification&quot;), 
  &apos;Could not perform the solution verification&apos;, 
IF(ISPICKVAL( Solution_Response__c, &quot;Repair Successful.&quot;), 
  &apos;Repair Successful.&apos;,
IF(ISPICKVAL( Solution_Response__c, &quot;Repair Successful with additional parts/procedures.&quot;),
  &apos;Repair Successful with additional parts/procedures.&apos;,
IF(ISPICKVAL( Solution_Response__c, &quot;Repair performed but didnot resolve the root cause.&quot;),
   &apos;Repair performed but didnot resolve the root cause.&apos;,
IF(ISPICKVAL( Solution_Response__c, &quot;Repair not performed.&quot;),
   &apos;Repair not performed.&apos;,
IF(CONTAINS(TEXT(Solution_Response__c),&quot;4Cs&quot;),TEXT(Solution_Response__c), &apos;&apos;))))))))</formula>
        <label>Icon</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rank__c</fullName>
        <label>Rank</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Order</label>
        <referenceTo>WorkOrder</referenceTo>
        <relationshipName>FSL_Audit_Trail</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Solution_Response__c</fullName>
        <label>Solution Response</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>4Cs-Cause</fullName>
                </value>
                <value>
                    <fullName>4Cs-Complaint</fullName>
                </value>
                <value>
                    <fullName>4Cs-Correction</fullName>
                </value>
                <value>
                    <fullName>4Cs Coverage-User Notes</fullName>
                </value>
                <value>
                    <fullName>Could not Perform Solution</fullName>
                </value>
                <value>
                    <fullName>Could not perform the solution verification</fullName>
                </value>
                <value>
                    <fullName>Most Likely Solution</fullName>
                </value>
                <value>
                    <fullName>Most likely the solution. Repair recommended.</fullName>
                </value>
                <value>
                    <fullName>Not the Solution</fullName>
                </value>
                <value>
                    <fullName>Not the solution. Continue troubleshooting.</fullName>
                </value>
                <value>
                    <fullName>Repair not Performed.</fullName>
                </value>
                <value>
                    <fullName>Repair performed but didnot resolve the root cause.</fullName>
                </value>
                <value>
                    <fullName>Repair Successful</fullName>
                    <isActive>false</isActive>
                    <label>Repair Successful</label>
                </value>
                <value>
                    <fullName>Repair Successful.</fullName>
                </value>
                <value>
                    <fullName>Repair Successful with additional parts/procedures.</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Symptom__c</fullName>
        <label>Symptom</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>FSL Audit Trail</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AT-{00000}</displayFormat>
        <label>Audit Trail ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FSL Audit Trails</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>